--- a/kvm/master/Vagrantfile
+++ b/kvm/master/Vagrantfile
@@ -11,6 +11,7 @@ Vagrant.configure("2") do |config|
        lv.title = "master.xtl"
        lv.cpus = 2
        lv.memory = 2048
+       lv.management_network_address = '192.169.1.0/24'
     end
     
     config.vm.provision "shell", path: "./../install-docker-kube.sh"
