--- a/kvm/worker1/Vagrantfile
+++ b/kvm/worker1/Vagrantfile
@@ -6,12 +6,12 @@ Vagrant.configure("2") do |config|
     config.vm.box = "centos/7"
     config.vm.network "private_network", ip: "172.16.10.101"
     config.vm.hostname = "worker1.xtl"
-    config.vm.synced_folder "../../k8s", "/data", type: "rsync"
   
     config.vm.provider :libvirt do |lv|
        lv.title = "worker1.xtl"
        lv.cpus = 2
        lv.memory = 2048
+       lv.management_network_address = '192.169.1.0/24'
     end
     
     config.vm.provision "shell", path: "./../install-docker-kube.sh"
