--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -11,4 +11,4 @@ tasks:
       sudo apt install qemu qemu-system-x86 linux-image-generic libguestfs-tools sshpass netcat -y
       .gitpod/prepare-rootfs.sh
     command: |
-      .gitpod/qemu.sh
+      .gitpod/qemu.sh $K8S_TYPE
